--- a/Collectdata.html
+++ b/Collectdata.html
@@ -7,7 +7,7 @@
 </head>
 <body>
  <center>
- <form method="post" action="insert.asp">
+ <form >
 Student Name <input type="text" name="unm"><br><br>
 Student ID <input type="number" name="roll"><br><br>
  <input type="submit" value="Submit">
